--- a/sport/src/css/Admin.css
+++ b/sport/src/css/Admin.css
@@ -1,79 +1,187 @@
 :root{
     --color: #ffc800 ;
 }
-
-.Admin{
-    padding-top:70px ;
+*{
+    color: black;
+}
+.wrap-Admin{
+    padding-top:74px ;
 
 }
+.Admin {
+    width: 100%;
+    display: flex;
+    position: relative;
+    
+} 
 .Admin .sidebar{
-    width:250px;
+    width:20%;
     height: calc(100vh - 70px);
-    background: #ffc800;
+    background: var(--color);
 }
 .Admin .sidebar ul li{
     padding: 10px 15px;
     font-size: 20px;
-    border-bottom: 1px solid black;
+    
+}
+.lesproduits{
+    width: 80%;
+}
+.container {
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	min-height:100vh;
 }
 
+.table-header {
+	display:flex;
+	width:100%;
+	border-bottom: 1px solid grey;;
+	
+}
 
+.table-row {
+	display:flex;
+    align-items: center;
+    justify-content: center;
+    width:100%;
+    border-bottom: 1px solid rgb(85, 84, 84);
+}
 
+.table-data, .header__item {
+	text-align:center;
+    width: 180px;
+}
+.table-data button{
+    padding: 10px 20px;
+    background: red;
+    outline: none;
+    border: none;
+    color: white;
+    border-radius: 20px;
+}
+.table-header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.header__item {
+	text-transform:uppercase;
+    width: 180px;
+    padding: 15px 0;
+    margin-bottom: 3px;
+}
 
+.filter__link {
+	text-decoration: none;
+	position:relative;
+	display:inline-block;	
+}
 
+.table-data img{
+    width: 50px ;
+    height: 50px;
+}
+.add-button {
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
+}
+.add-button img{
+    width: 50px;
+    height: 50px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* overlay */
 
 .wrap-Overlay-add {
     padding-top: 70px;
-    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: rgba(255, 255, 255, 0.9); 
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 }
 
-.Admin .Overlay-add form input{
-    display: block;
-    width: 400px;
-    height: 35px;
+.Overlay-add {
+    position: relative;
+    width: 80%;
+    height: 80%;
+    background: #fff; 
+    padding: 20px;
+    border-radius: 10px;
+    z-index: 33333333;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); 
 }
-.Quiz .Quiz-form form input[type=submit]{
+
+
+.Overlay-add form input {
+    display: block;
+    width:400px;
+    height: 35px;
+    margin-bottom: 15px;
+}
+.Overlay-add form  .center-submit{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.Overlay-add form input[type=submit] {
     margin: 20px 0;
     background-color: #ffc800;
     outline: none;
     border: none;
+    cursor: pointer;
+    align-items: center;
+    text-align: center;
+}
+.Overlay-add .close-me{
+    position: absolute;
+    top: -30px;
+    right: -30px
+}
+.Overlay-add .close-me button{
+    outline: none;
+    background: white;
+    border: 50%;
+    width: 50px;
+    height: 50px;
+    border: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); 
+    border-radius: 50%;
+}
+.Overlay-add .close-me button img{
+    width: 30px;
+    height: 30px;
 }
 
+
+.flex-form{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+footer {
+    display: none;
+}
